Fixing Header z-index

--- a/themes/opensolar-theme/src/scss/components/_header.scss
+++ b/themes/opensolar-theme/src/scss/components/_header.scss
@@ -3,6 +3,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     width: 100%;
+    position: relative;
     z-index: 100;
     top: 0;
     background-color: white;
